--- a/foods/styles/medium.css
+++ b/foods/styles/medium.css
@@ -151,27 +151,17 @@
 
     #visitUsSection {
         display: flex;
-        /* padding-bottom: 10px; */
      }
-
-     /* .visitUsTextContainer{
-        padding-top: 0px;
-        padding-bottom: 20px;
-     } */
 
      #visitUsSection div{
         margin: 20px;
-        /* border-left: 2px solid rgba(233, 169, 35, 0.5); */
         padding-left: 20px;
         margin-right: auto;
         margin-left: auto;
-        /* padding-bottom: 150px; */
      }
 
     iframe{
         margin: 20px auto;
-        /* max-width: 300px;
-        max-height: 300px; */
      }
 
 }
