--- a/foods/styles/small.css
+++ b/foods/styles/small.css
@@ -12,6 +12,10 @@
 
 /*HEADER************************************************************** */
 
+img {
+    box-sizing: border-box;
+}
+
 header {
     font-family: var(--play);
     position: fixed;
@@ -20,10 +24,10 @@ header {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.8);
     border-bottom: 4px solid rgba(233, 169, 35, 0.5);
-    padding: 5px;
+    padding: 5px 0px;
     display: block;
     align-items: center;
-    z-index: 9999; /* set a high z-index value so the parallax section will display below it */
+    z-index: 9999; 
 }
 
 header .imgH1Box {
@@ -48,11 +52,11 @@ header .navSection {
     padding-top: 15px;
     text-align: center;
 }
-
+/* 
 .navSection {
-    width: 100;
+    width: 100%;
     height: auto;
-}
+} */
 
 nav ul {
     list-style: none;
@@ -62,7 +66,7 @@ nav ul {
   
 nav ul li {
     display: inline-block;
-    padding: 0 5px 10px 5px;
+    padding: 0px 5px 10px 5px;
 }
   
 nav ul li:hover {
@@ -84,12 +88,6 @@ nav ul li a:active{
 .bannerBox {
     height: 15rem;
     position: relative; 
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    justify-self: center;
-    justify-items: center;
-    text-align: center;    
 }
 
 .banner {
@@ -150,7 +148,6 @@ nav ul li a:active{
 body {
     font-family: var(--play);
     background-color: rgb(255, 239, 203);
-    overflow-x: hidden;
 }
 
 main{
@@ -173,7 +170,6 @@ main{
 }
 
 .actionPic {
-    /* float:right;  */
     margin: 0 auto;
     max-width: 200px;
     height: 100%;
@@ -223,7 +219,6 @@ main{
     border: 4px solid rgba(233, 169, 35, 0.5);
     color: var(--cream);
     margin-top: 10px;
-    
 }
 
 .placePic {
@@ -295,7 +290,7 @@ main{
 .socialBox {
     width: 100%;
     text-align: center;
-    padding: 10px 10px 5px 10px;
+    padding-top: 10px;
     background-color:rgb(100, 13, 13);
     border-top: 4px solid rgba(233, 169, 35, 0.5);
     margin: 0 auto;
@@ -303,7 +298,7 @@ main{
 
 .socialIcons {
     width: 35px;
-    padding: 0px 2.5px 0px 2.5px; 
+    padding: 10px 2.5px 10px 2.5px; 
 }
 
 .socialIcons:hover{
@@ -332,7 +327,6 @@ footer{
     margin: 50px auto;
     text-align: center;
     padding-right: 20px;
-    /* padding-left: -1.5rem; */
 }
 
 .imgFooterBox .logo {
@@ -396,29 +390,6 @@ footer .footerTextBox p{
     max-width: 400px;
     margin: 50px auto;
 }
-
-
-/* #orderFieldset{
-    position: relative;
-} */
-
-/* #orderLogoContainer{
-    display: none;
-    position: absolute;
-    top: 200px;
-    right: 50px;
-    width: 100%;
-    height: 100%;
-   
-} */
-
-/* .orderLogo{
-    width: 200px; 
-    float: right;
-
-} */
-
-
 
  form label, form input, form textarea{
     display: block;
@@ -491,11 +462,6 @@ footer .footerTextBox p{
     border-radius: 15px;
     MARGIN-bottom: 30PX;
 }
-
-/* #babyCropedPicContainer {
-   display: none;
-} */
-
 
  #thankYou {
     font-weight: bold;
